--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -1861,7 +1861,7 @@ gerfla.12.a:0 "완벽하군"
 ### Reichspakt Events ###
 
 germit.1.t:0 "독일의 제안"
-germit.1.d:0 "검은 월요일의 결과에 비추어 독일 정부는 다소 이상한 제안을 내놓았습니다. Reichspakt의 상업과 무역을 의미있게 증가시키고 단순화하기 위해 독일 통화 인 Mark가 모든 미틀오이로파에서 통용되는 통화가되어야하며 공식적으로 '유로파마르크화'로 이름이 변경되어야한다고 제안합니다. \n\n독일의 많은 주제 파트너 '상태에서 통화는 이미 Mark와 연결되어 있으므로 실제 영향은 상대적으로 미미합니다. 이 제안에 어떻게 대응해야합니까?"
+germit.1.d:0 "검은 월요일의 결과에 비추어 독일 정부는 다소 이상한 제안을 내놓았습니다. Reichspakt의 상업과 무역을 의미있게 증가시키고 단순화하기 위해 독일 통화 인 Mark가 모든 미틀오이로파에서 통용되는 통화가되어야하며 공식적으로 '유로파마르크화'로 이름이 변경되어야한다고 제안합니다. \n\n독일의 많은 주제 파트너 '상태에서 통화는 이미 Mark와 연결되어 있으므로 실제 영향은 상대적으로 미미합니다. 이 제안에 어떻게 대응해야 할까요?"
 germit.1.a:0 "우리도 참가한다!"
 germit.1.b:0 "'봉신 동맹국'이라고, 엉?"
 germit.1.c:0 "오 맙소사, 당연히 아니다!"
@@ -1881,8 +1881,8 @@ germit.4.a:0 "그러길 바라지..."
 germit.5.t:0 "유로파마르크화로 이동"
 germit.5.d:0 "미틀오이로파의 신입 회원으로서 우리 경제를 거래 블록의 경제와 일치시키는 것은 현 상태입니다. 이는 단일 통화에 가입하는 것을 의미합니다. 우리 나라를 Reichsmark로 전환함으로써 Reichspakt의 많은 행정 이익을 활용할 수는 있지만 국가 주권 상실은 다소 어려움이 있습니다."
 germit.5.a:0 "내가 생각하는 거래의 일부."
-germit.5.b:0 "우리에게는 선택의 여지가 없습니다."
-germit.5.c:0 "왜 우리는 우리의 통화를 포기할 것입니까?"
+germit.5.b:0 "우리에게는 선택의 여지가 없다."
+germit.5.c:0 "왜 우리가 우리 통화를 포기한 거지?"
 
 germit.6.t:0 "유럽의회 회원"
 germit.6.d:0 "우리의 미틀오이로파 회원이 지시 한 단일 유로파마르크화 통화의 일원으로서 유럽 의회에 합류하여 현재 대다수의 블록에 자신을 맞추는 것이 현 재입니다. 이 기구인 '유럽 의회'는 무역을 규제하기 위해 존재하며 추가 통합의 핵심적인 부분입니다."
@@ -1913,8 +1913,8 @@ germit.11.b:0 "좋아, 그럼..."
 germit.11.c:0 "누가 이걸 누가 요리 했니?"
 
 germit.12.t:0 "미틀오이로파를 떠나다"
-germit.12.d:0 "미틀오이로파의 회원 자격으로 우리는 무역 및 상호 방위와 같은 몇 가지 혜택을받는 동시에 많은 의무를 지고 블록에 대단히 통합되었습니다. 불행히도 이제는이 덩굴손을 우리 국가에서 풀어 내려고 노력할 시간이 왔습니다."
-germit.12.a:0 "왜 우리는 이들 중 절반까지 서명 했습니까?"
+germit.12.d:0 "미틀오이로파의 회원 자격으로 우리는 무역 및 상호 방위와 같은 몇 가지 혜택을 받는 동시에 많은 의무를 지고 이 블록에 대단히 통합되었습니다. 불행히도 이제는 이 덩굴손을 우리 국가에서 풀어 내려고 노력할 시간이 왔습니다."
+germit.12.a:0 "왜 우리가 이 중 절반이나 서명을 했지?"
 
 ### Crete Stuff ###
 
@@ -1924,7 +1924,7 @@ CRE_REF:0 "크레타 매각"
 
 ### Events ###
 gerdom.269.t:0 "크레타에 대한 의문"
-gerdom.269.d:0 "검은 월요일 이후 우리의 경제는 난관을 겪고 있습니다. 제국의 식민지로 남길 땅을 엄중히 검토해야 합니다. 중점적으로 조사 중인 땅은 크레타입니다. 크레타는 크고 방어하기에도 몰타보다 어렵습니다. 또한 유지 비용도 더 많이 듭니다. 적자를 만회해야 합니다. 우선 이 땅을 오스만이나 그리스에게 매각해야 합니다. 어쩌시겠습니까?"
+gerdom.269.d:0 "검은 월요일 이후 우리의 경제는 난관을 겪고 있습니다. 제국의 식민지로 남길 땅을 엄중히 검토해야 합니다. 중점적으로 조사 중인 땅은 크레타입니다. 크레타는 크고 방어하기에도 몰타보다 어렵습니다. 또한 유지 비용도 더 많이 듭니다. 적자를 만회해야 합니다. 우선 이 땅을 오스만이나 그리스에게 매각해야 합니다. 어떻게 할까요?"
 gerdom.269.a:0 "크레타를 계속 보유한다."
 gerdom.269.b:0 "오스만에 크레타를 매각한다."
 gerdom.269.c:0 "그리스에 크레타를 매각한다."
@@ -1958,12 +1958,12 @@ gerdom.275.a:0 "그럼 크레타를 계속 가지고 있겠다."
 gerdom.275.b:0 "오스만 제국과 이야기해보자."
 
 gerdom.276.t:0 "크레타 지역"
-gerdom.276.d:0 "독일과의 거래가 끝났습니다. 크레타의 상황은 우리나라에 맞서는 전쟁터나 다름없습니다. 이렇듯 고유적으로 형성된 크레타국의 정체성은 섬에 대한 통제가 약했기 때문입니다. 많은 장관들이 크레타 정부를 속여넘기자는 말을 합니다. 몇몇 매파 인물들은 직접적인 합병을 이야기합니다. 어쩌시겠습니까?"
+gerdom.276.d:0 "독일과의 거래가 끝났습니다. 크레타의 상황은 우리나라에 맞서는 전쟁터나 다름없습니다. 이렇듯 고유적으로 형성된 크레타국의 정체성은 섬에 대한 통제가 약했기 때문입니다. 많은 장관들이 크레타 정부를 속여넘기자는 말을 합니다. 몇몇 매파 인물들은 직접적인 합병을 이야기합니다. 어떻게 할까요?"
 gerdom.276.a:0 "새 크레타 정부를 수립한다."
 gerdom.276.b:0 "자치권은 끝이다!"
 
 gerdom.277.t:0 "크레타 지역"
-gerdom.277.d:0 "독일과의 거래가 끝났습니다. 크레타의 상황은 우리나라에 맞서는 전쟁터나 다름없습니다.  세계 대전 이전까지 크레타는 우리 땅이었습니다. 많은 장관들이 크레타국을 합병하자는 말을 합니다. 몇몇 인물들은 간접적으로 예속시키자는 이야기를 합니다. 어쩌시겠습니까??"
+gerdom.277.d:0 "독일과의 거래가 끝났습니다. 크레타의 상황은 우리나라에 맞서는 전쟁터나 다름없습니다.  세계 대전 이전까지 크레타는 우리 땅이었습니다. 많은 장관들이 크레타국을 합병하자는 말을 합니다. 몇몇 인물들은 간접적으로 예속시키자는 이야기를 합니다. 어떻게 할까요?"
 gerdom.277.a:0 "새 크레타 정부를 수립한다."
 gerdom.277.b:0 "두 번째 에노시스를 찬미하라!"
 
