--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -620,7 +620,7 @@ gerdom.16.j:0 "계획을 폐기하라!"
 ### Schleicher and the GVLP ###
 
 gerdom.17.t:0 "쿠르프 폰 슐라이허와 DVLP"
-gerdom.17.d:0 "'스캔들! 스캔들이다! 재상 폰 슐라이허가 알프레드 폰 후겐베르크와 만찬 중에 했던 말의 내용이 드러났다!' 오늘 신문사의 소년들이 소리쳤습니다. 루덴도르프 정권의 멸망을 야기한 1923년 악명 높은 동부구제 스캔(Osthilfeskandal)을 공개했던 것으로 유명한 베를리너 태그블래트가 또 한번의 폭탄을 터트렸습니다. \n\n한 기자가 베를린 극장에서 재상 폰 슐라이허와 반동 융커당 DVLP의 지도자인 알프레드 폰 후겐베르크 사이의 대화를 부분적으로 들었습니다. 그 건물이 낮은 것은 스캔들을 부추길 뿐입니다. \n\n그리고 많은 사람들이 모여 이 소식에 대해 토론했는데, 한 주제가 가장 흥미로웠습니다. 조간 신문을 펼쳤을 때 황제의 반응은 어떨까요?"
+gerdom.17.d:0 "'스캔! 스캔이다! 재상 폰 슐라이허가 알프레드 폰 후겐베르크와 만찬 중에 했던 말의 내용이 드러났다!' 오늘 신문사의 소년들이 소리쳤습니다. 루덴도르프 정권의 멸망을 야기한 1923년 악명 높은 동부구제 스캔(Osthilfeskandal)을 공개했던 것으로 유명한 베를리너 태그블래트가 또 한번의 폭탄을 터트렸습니다. \n\n한 기자가 베를린 극장에서 재상 폰 슐라이허와 반동 융커당 DVLP의 지도자인 알프레드 폰 후겐베르크 사이의 대화를 부분적으로 들었습니다. 그 건물이 낮은 것은 스캔들을 부추길 뿐입니다. \n\n그리고 많은 사람들이 모여 이 소식에 대해 토론했는데, 한 주제가 가장 흥미로웠습니다. 조간 신문을 펼쳤을 때 황제의 반응은 어떨까요?"
 gerdom.17.a:0 "요한! 폰 파펜을 데려오라!"
 gerdom.17.b:0 "사회 민주당은 더 이상 나빠질 수 없다!"
 gerdom.17.c:0 "브뤼닝의 때이다!"
