--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -339,9 +339,9 @@ PRF_EMP_national_populist_DEF:0 "인도 제국"
 PRF_EMP_paternal_autocrat:0 "인도 제국"
 PRF_EMP_paternal_autocrat_ADJ:0 "인도"
 PRF_EMP_paternal_autocrat_DEF:0 "인도 제국"
-PRF_EMP_radical_socialist:0 "인도 사회주의공화국"
+PRF_EMP_radical_socialist:0 "인도 사회주의 공화국"
 PRF_EMP_radical_socialist_ADJ:0 "인도"
-PRF_EMP_radical_socialist_DEF:0 "인도 사회주의공화국"
+PRF_EMP_radical_socialist_DEF:0 "인도 사회주의 공화국"
 PRF_EMP_social_conservative:0 "인도 제국"
 PRF_EMP_social_conservative_ADJ:0 "인도"
 PRF_EMP_social_conservative_DEF:0 "인도 제국"
@@ -356,7 +356,7 @@ PRF_EMP_syndicalist_ADJ:0 "인도"
 PRF_EMP_syndicalist_DEF:0 "인도 코뮌"
 PRF_EMP_totalist:0 "인도 코뮌"
 PRF_EMP_totalist_ADJ:0 "인도"
-PRF_EMP_totalist_DEF:0 "인도 코뮌"
+PRF_EMP_totalist_DEF:0 "the 인도 코뮌"
 
 SAU_ARA_authoritarian_democrat:0 "사우디아라비아"
 SAU_ARA_authoritarian_democrat_ADJ:0 "사우디"
@@ -382,9 +382,9 @@ SAU_ARA_social_democrat_DEF:0 "사우디아라비아"
 SAU_ARA_social_liberal:0 "사우디아라비아"
 SAU_ARA_social_liberal_ADJ:0 "사우디"
 SAU_ARA_social_liberal_DEF:0 "사우디아라비아"
-SAU_ARA_syndicalist:0 "아라비아 노동 연맹"
+SAU_ARA_syndicalist:0 "아라비아 생디칼리스트 연합"
 SAU_ARA_syndicalist_ADJ:0 "붉은 아라비아"
-SAU_ARA_syndicalist_DEF:0 "아라비아 노동 연맹"
+SAU_ARA_syndicalist_DEF:0 "아라비아 생디칼리스트 연합"
 SAU_ARA_totalist:0 "아라비아 인민 연방"
 SAU_ARA_totalist_ADJ:0 "붉은 아라비아"
 SAU_ARA_totalist_DEF:0 "아라비아 인민 연방"
@@ -3362,3 +3362,161 @@ USA_SAF_EDW_autonomy_dominion_DEF:0 "북아메리카 자치령"
 USA_SAF_EDW_autonomy_colony_DEF:0 "48 식민지"
 USA_SAF_EDW_autonomy_puppet_DEF:0 "북 아메리카령 아프리카"
 USA_SAF_EDW_autonomy_integrated_puppet_DEF:0 "윌리스 여왕령"
+
+AHE_totalist:0 "Austro-Hungarian Empire"
+AHE_totalist_ADJ:0 "Austro-Hungarian"
+AHE_totalist_DEF:0 "the Austro-Hungarian Empire"
+AHE_syndicalist:0 "Austro-Hungarian Empire"
+AHE_syndicalist_ADJ:0 "Austro-Hungarian"
+AHE_syndicalist_DEF:0 "the Austro-Hungarian Empire"
+AHE_radical_socialist:0 "Austro-Hungarian Empire"
+AHE_radical_socialist_ADJ:0 "Austro-Hungarian"
+AHE_radical_socialist_DEF:0 "the Austro-Hungarian Empire"
+AHE_social_democrat:0 "Austro-Hungarian Empire"
+AHE_social_democrat_ADJ:0 "Austro-Hungarian"
+AHE_social_democrat_DEF:0 "the Austro-Hungarian Empire"
+AHE_social_liberal:0 "Austro-Hungarian Empire"
+AHE_social_liberal_ADJ:0 "Austro-Hungarian"
+AHE_social_liberal_DEF:0 "the Austro-Hungarian Empire"
+AHE_market_liberal:0 "Austro-Hungarian Empire"
+AHE_market_liberal_ADJ:0 "Austro-Hungarian"
+AHE_market_liberal_DEF:0 "the Austro-Hungarian Empire"
+AHE_social_conservative:0 "Austro-Hungarian Empire"
+AHE_social_conservative_ADJ:0 "Austro-Hungarian"
+AHE_social_conservative_DEF:0 "the Austro-Hungarian Empire"
+AHE_authoritarian_democrat:0 "Austro-Hungarian Empire"
+AHE_authoritarian_democrat_ADJ:0 "Austro-Hungarian"
+AHE_authoritarian_democrat_DEF:0 "the Austro-Hungarian Empire"
+AHE_paternal_autocrat:0 "Austro-Hungarian Empire"
+AHE_paternal_autocrat_ADJ:0 "Austro-Hungarian"
+AHE_paternal_autocrat_DEF:0 "the Austro-Hungarian Empire"
+AHE_national_populist:0 "Austro-Hungarian Empire"
+AHE_national_populist_ADJ:0 "Austro-Hungarian"
+AHE_national_populist_DEF:0 "the Austro-Hungarian Empire"
+
+DNF_totalist:0 "Danubian Federation"
+DNF_totalist_ADJ:0 "Danubian"
+DNF_totalist_DEF:0 "the Danubian Federation"
+DNF_syndicalist:0 "Danubian Federation"
+DNF_syndicalist_ADJ:0 "Danubian"
+DNF_syndicalist_DEF:0 "the Danubian Federation"
+DNF_radical_socialist:0 "Danubian Federation"
+DNF_radical_socialist_ADJ:0 "Danubian"
+DNF_radical_socialist_DEF:0 "the Danubian Federation"
+DNF_social_democrat:0 "Danubian Federation"
+DNF_social_democrat_ADJ:0 "Danubian"
+DNF_social_democrat_DEF:0 "the Danubian Federation"
+DNF_social_liberal:0 "Danubian Federation"
+DNF_social_liberal_ADJ:0 "Danubian"
+DNF_social_liberal_DEF:0 "the Danubian Federation"
+DNF_market_liberal:0 "Danubian Federation"
+DNF_market_liberal_ADJ:0 "Danubian"
+DNF_market_liberal_DEF:0 "the Danubian Federation"
+DNF_social_conservative:0 "Danubian Federation"
+DNF_social_conservative_ADJ:0 "Danubian"
+DNF_social_conservative_DEF:0 "the Danubian Federation"
+DNF_authoritarian_democrat:0 "Danubian Federation"
+DNF_authoritarian_democrat_ADJ:0 "Danubian"
+DNF_authoritarian_democrat_DEF:0 "the Danubian Federation"
+DNF_paternal_autocrat:0 "Danubian Federation"
+DNF_paternal_autocrat_ADJ:0 "Danubian"
+DNF_paternal_autocrat_DEF:0 "the Danubian Federation"
+DNF_national_populist:0 "Danubian Federation"
+DNF_national_populist_ADJ:0 "Danubian"
+DNF_national_populist_DEF:0 "the Danubian Federation"
+
+PER_REP_totalist:0 "Socialist Republic of Iran"
+PER_REP_totalist_ADJ:0 "Iranian"
+PER_REP_totalist_DEF:0 "the Socialist Republic of Iran"
+PER_REP_syndicalist:0 "Socialist Republic of Iran"
+PER_REP_syndicalist_ADJ:0 "Iranian"
+PER_REP_syndicalist_DEF:0 "the Socialist Republic of Iran"
+PER_REP_radical_socialist:0 "Socialist Republic of Iran"
+PER_REP_radical_socialist_ADJ:0 "Iranian"
+PER_REP_radical_socialist_DEF:0 "the Socialist Republic of Iran"
+PER_REP_social_democrat:0 "Republic of Iran"
+PER_REP_social_democrat_ADJ:0 "Iranian"
+PER_REP_social_democrat_DEF:0 "the Republic of Iran"
+PER_REP_social_liberal:0 "Republic of Iran"
+PER_REP_social_liberal_ADJ:0 "Iranian"
+PER_REP_social_liberal_DEF:0 "the Republic of Iran"
+PER_REP_market_liberal:0 "Republic of Iran"
+PER_REP_market_liberal_ADJ:0 "Iranian"
+PER_REP_market_liberal_DEF:0 "the Republic of Iran"
+PER_REP_social_conservative:0 "Republic of Iran"
+PER_REP_social_conservative_ADJ:0 "Iranian"
+PER_REP_social_conservative_DEF:0 "the Republic of Iran"
+PER_REP_authoritarian_democrat:0 "Republic of Iran"
+PER_REP_authoritarian_democrat_ADJ:0 "Iranian"
+PER_REP_authoritarian_democrat_DEF:0 "the Republic of Iran"
+PER_REP_paternal_autocrat:0 "Iran"
+PER_REP_paternal_autocrat_ADJ:0 "Iranian"
+PER_REP_paternal_autocrat_DEF:0 "Iran"
+PER_REP_national_populist:0 "Iran"
+PER_REP_national_populist_ADJ:0 "Iranian"
+PER_REP_national_populist_DEF:0 "Iran"
+
+CAR_kingdom_totalist:0 "Iberian Federation"
+CAR_kingdom_totalist_ADJ:0 "Iberian"
+CAR_kingdom_totalist_DEF:0 "the Iberian Federation"
+CAR_kingdom_syndicalist:0 "Iberian Federation"
+CAR_kingdom_syndicalist_ADJ:0 "Iberian"
+CAR_kingdom_syndicalist_DEF:0 "the Iberian Federation"
+CAR_kingdom_radical_socialist:0 "Iberian Federation"
+CAR_kingdom_radical_socialist_ADJ:0 "Iberian"
+CAR_kingdom_radical_socialist_DEF:0 "the Iberian Federation"
+CAR_kingdom_social_democrat:0 "Kingdom of Spain"
+CAR_kingdom_social_democrat_ADJ:0 "Spanish"
+CAR_kingdom_social_democrat_DEF:0 "the Kingdom of Spain"
+CAR_kingdom_social_liberal:0 "Kingdom of Spain"
+CAR_kingdom_social_liberal_ADJ:0 "Spanish"
+CAR_kingdom_social_liberal_DEF:0 "the Kingdom of Spain"
+CAR_kingdom_market_liberal:0 "Kingdom of Spain"
+CAR_kingdom_market_liberal_ADJ:0 "Spanish"
+CAR_kingdom_market_liberal_DEF:0 "the Kingdom of Spain"
+CAR_kingdom_social_conservative:0 "Kingdom of Spain"
+CAR_kingdom_social_conservative_ADJ:0 "Spanish"
+CAR_kingdom_social_conservative_DEF:0 "the Kingdom of Spain"
+CAR_kingdom_authoritarian_democrat:0 "Kingdom of Spain"
+CAR_kingdom_authoritarian_democrat_ADJ:0 "Spanish"
+CAR_kingdom_authoritarian_democrat_DEF:0 "the Kingdom of Spain"
+CAR_kingdom_paternal_autocrat:0 "Kingdom of Spain"
+CAR_kingdom_paternal_autocrat_ADJ:0 "Spanish"
+CAR_kingdom_paternal_autocrat_DEF:0 "the Kingdom of Spain"
+CAR_kingdom_national_populist:0 "Spanish Empire"
+CAR_kingdom_national_populist_ADJ:0 "Spanish"
+CAR_kingdom_national_populist_DEF:0 "the Spanish Empire"
+
+RPO_totalist:0 "Portuguese Socialist Republic"
+RPO_totalist_ADJ:0 "Socialist-Portuguese"
+RPO_totalist_DEF:0 "the Portuguese Socialist Republic"
+RPO_syndicalist:0 "Portuguese Socialist Republic"
+RPO_syndicalist_ADJ:0 "Socialist-Portuguese"
+RPO_syndicalist_DEF:0 "the Portuguese Socialist Republic"
+RPO_radical_socialist:0 "União Anarquista Portuguesa"
+RPO_radical_socialist_ADJ:0 "Anarcho-Portuguese"
+RPO_radical_socialist_DEF:0 "the União Anarquista Portuguesa"
+RPO_social_democrat:0 "Portugal"
+RPO_social_democrat_ADJ:0 "Portuguese"
+RPO_social_democrat_DEF:0 "Portugal"
+RPO_social_liberal:0 "Portugal"
+RPO_social_liberal_ADJ:0 "Portuguese"
+RPO_social_liberal_DEF:0 "Portugal"
+RPO_market_liberal:0 "Portugal"
+RPO_market_liberal_ADJ:0 "Portuguese"
+RPO_market_liberal_DEF:0 "Portugal"
+RPO_social_conservative:0 "Portugal"
+RPO_social_conservative_ADJ:0 "Portuguese"
+RPO_social_conservative_DEF:0 "Portugal"
+RPO_authoritarian_democrat:0 "Portugal"
+RPO_authoritarian_democrat_ADJ:0 "Portuguese"
+RPO_authoritarian_democrat_DEF:0 "Portugal"
+RPO_paternal_autocrat:0 "Portugal"
+RPO_paternal_autocrat_ADJ:0 "Portuguese"
+RPO_paternal_autocrat_DEF:0 "Portugal"
+RPO_national_populist:0 "Portugal"
+RPO_national_populist_ADJ:0 "Portuguese"
+RPO_national_populist_DEF:0 "Portugal"
+
+OTT_lost_war:0 "터키 임시 정부"
+OTT_lost_war_DEF:0 "터키 임시 정부"
