--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -68,7 +68,7 @@ SER_kingdom_national_populist_DEF:0 "세르비아 왕국"
 
 SER_YUG_totalist:0 "유고슬라비아 사회주의 공화국"
 SER_YUG_totalist_ADJ:0 "유고슬라비아"
-SER_YUG_totalist_DEF:0 "유고슬라비아 사회주의 공화국a"
+SER_YUG_totalist_DEF:0 "유고슬라비아 사회주의 공화국"
 SER_YUG_syndicalist:0 "유고슬라비아 사회주의 공화국"
 SER_YUG_syndicalist_ADJ:0 "유고슬라비아"
 SER_YUG_syndicalist_DEF:0 "유고슬라비아 사회주의 공화국"
