--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -31,7 +31,7 @@ yerevan_state_university:0 "예레반 국립 대학"
 ### Australasia ###
 amalgamated_wireless_australasia:0 "오스트랄라시아 합병 무선"
 broken_hill:0 "브로큰 힐 사유 주식회사"
-commonwealth_oil_refineries:0 "연방국 정유"
+commonwealth_oil_refineries:0 "연방 정유"
 lysaghts_works_kr:0 "리사트 설계사"
 colonial_ammunition_company:0 "식민지 탄약 회사"
 royal_australian_artillery:0 "왕립 오스트레일리아 대포"
@@ -49,7 +49,7 @@ vickers_armstrong_australasia:0 "비커스-암스트롱 오스트랄라시아"
 ### Austria ###
 austria_montage:0 "알프스 조립 회사"
 puch:0 "푸흐"
-leopold_gasser_waffenfabrik:0 "레오폴트 가서 무기공장"
+leopold_gasser_waffenfabrik:0 "레오폴트 가서 군수 공업"
 semperit:0 "젬페리트"
 austro_daimler:0 "오스트로 다임러"
 skoda:1 "스코다"
@@ -66,13 +66,13 @@ stabilimento_tecnico_triestino:0 "트리에스테 기술 공업"
 bayer_austria:0 "바이어 오스트리아"
 bohler:0 "뵐러 AG"
 simmering_graz_pauker:0 "지머링-그라츠-파우커"
-wiener_neu_lokomotiv:0 "빈 노이슈타트 기관차공장"
-wiener_neu_flugzeug:0 "빈 노이슈타트 항공기공장"
+wiener_neu_lokomotiv:0 "빈 노이슈타트 기관차 공장"
+wiener_neu_flugzeug:0 "빈 노이슈타트 항공기 공장"
 oeffag:0 "오스트리아 항공기공장 AG"
 
 ### Bharatiyan Commune ###
 bengalese_steel_mills:0 "벵골 제강"
-bengal_ordnance_factories:0 "벵골 군수 공장"
+bengal_ordnance_factories:0 "벵골 군수 공업"
 premier_automobiles:0 "제일 차량 유한회사"
 chittaranjan_locomotive:0 "치타란잔 기관차 설계사"
 indian_national_airways:0 "인도 국립 항공사"
@@ -106,7 +106,7 @@ companhia_siderurgica_nacional:0 "Companhia Siderúrgica Nacional"
 universidade_federal_rio_de_janeiro:0 "Universidade Federal do Rio de Janeiro"
 ultra_brazil:0 "울트라"
 imbel:0 "IMBEL"
-taurus:0 "Taurus"
+taurus:0 "타우루스"
 fabrica_nacional_motores:0 "Fábrica Nacional de Motores"
 companhia_aeronautica_paulista:0 "Companhia Aeronáutica Paulista"
 arsenal_marinha_rio_de_janeiro:0 "Arsenal de Marinha do Rio de Janeiro"
@@ -122,10 +122,10 @@ darzhavna_aeroplanna_rabotilnitsa:0 "Darzhavna Aeroplanna Rabotilnitsa"
 kaproni_bulgarski:0 "카프로니 불가스키"
 
 ### Canada ###
-dominion_steel_and_coal:0 "Dominion Steel & Coal Corporation"
+dominion_steel_and_coal:0 "도미니언 철강 & 석탄 주식회사"
 bell_canada:0 "벨 캐나다"
 canadian_marconi_company:0 "Canadian Marconi Company"
-imperial_oil:0 "Imperial Oil"
+imperial_oil:0 "임페리얼 정유"
 canadian_arsenals:0 "Canadian Arsenals Ltd."
 dominion_cartridge:0 "Dominion Cartridge Co."
 canadian_industries_limited:0 "Canadian Industries Limited"
@@ -133,11 +133,11 @@ royal_canadian_ordnance_corps:0 "Royal Canadian Ordnance Corps"
 general_motors_canada:0 "General Motors Canada"
 massey_harris:0 "Massey-Harris"
 leyland:0 "레이랜드 모터스"
-canadian_pacific:0 "Canadian Pacific Railway"
+canadian_pacific:0 "캐나다 태평양 철도"
 canadian_car:0 "Canadian Car & Foundry"
 montreal_locomotive_works:0 "Montreal Locomotive Works"
 avro_canada:0 "Avro Canada"
-bristol:0 "Bristol"
+bristol:0 "브리스톨"
 canadair:0 "Canadair"
 de_havilland_canada:0 "de Havilland Canada"
 fairey_aviation_canada:0 "Fairey Aviation Canada"
@@ -162,7 +162,7 @@ baldwin_locomotive_works:0 "Baldwin Locomotive Works"
 fisher_tank_arsenal:0 "Fisher Tank Arsenal"
 brewster:0 "Brewster"
 consolidated:0 "Consolidated"
-philadelphia_naval_shipyard:0 "Philadelphia Naval Shipyard"
+philadelphia_naval_shipyard:0 "필라델피아 해군 조선소"
 
 ### Commune of France ###
 metallurgique_de_normandie:0 "Société Métallurgique de Normandie"
@@ -241,13 +241,13 @@ koolhoven_dei:0 "Koolhoven Soerabaja"
 kn_rotterdamsche_lloyd:0 "Koninklijke Rotterdamsche Lloyd"
 
 ### India ###
-tata_steel:0 "Tata Steel"
+tata_steel:0 "타타 철강"
 punjab_ordnance_factories:0 "Punjab Ordnance Factories"
 ashok_leyland:0 "Ashok Leyland"
 jessop_company:0 "Jessop & Company Limited"
-tata_air:0 "Tata Air"
-karachi_shipyard:0 "Karachi Shipyard"
-vickers_armstrong_india:0 "Vickers-Armstrong India"
+tata_air:0 "타타 항공"
+karachi_shipyard:0 "카라치 조선소"
+vickers_armstrong_india:0 "비커스-암스트롱 인디아"
 
 ### Egypt ###
 heliopolis_chemical:0 "Heliopolis Chemical Industries"
@@ -285,7 +285,7 @@ manchuria_airplane_company:0 "Dongbei Airplane Manufacturing Company"
 manchuria_aviation_company:0 "Manchuria Aviation Company"
 
 ### Finland ###
-nokia:0 "Nokia"
+nokia:0 "노키아"
 salora:0 "Salora"
 rikkihappo:0 "Rikkihappo"
 lapua:0 "Lapua"
@@ -293,7 +293,7 @@ tikkakoski:0 "Tikkakoski"
 vihtavuori:0 "Vihtavuori"
 tampella:0 "Tampella"
 vanajan_autotehdas:0 "Vanajan Autotehdas"
-sisu:0 "Sisu"
+sisu:0 "시수"
 valtion_company:0 "Valtion Lentokonetehdas"
 veljekset_karhumaki:0 "Veljekset Karhumaki"
 crichton_vulcan:0 "Crichton-Vulcan"
@@ -319,8 +319,8 @@ oasa:0 "OASA"
 tangalakis_temax:0 "Tangalakis-Temax"
 
 ### Hawaii ###
-dole:0 "Hawaiian Pineapple Company"
-university_of_hawaii:0 "University of Hawaii"
+dole:0 "하와이안 파인애플 법인"
+university_of_hawaii:0 "하와이 대학"
 wahiawa_armory:0 "Wahiawa Armoury"
 schofield_barracks:0 "Schofield Barracks"
 ford_hawaii:0 "Ford Hawaii"
@@ -356,35 +356,35 @@ workman_clark_company:0 "Workman, Clark and Company"
 john_rigby:0 "John Rigby & Company"
 
 ### Japan ###
-Nippon_Electric_Company:0 "Nippon Electric Company"
-Ishikawajima_Heavy_Industries:0 "Ishikawajima Heavy Industries"
-Mitsui_Zaibatsu:0 "Mitsui Zaibatsu"
-Furukawa_Siemens:0 "Furukawa Siemens"
-Nihon_Musen:0 "Nihon Musen"
-Nippon_Oil:0 "Nippon Oil"
-kawasaki:0 "Kawasaki"
-sumitomo:0 "Sumitomo"
-tokyo_shibaura_denki:0 "Tokyo Shibaura Denki"
-nichitsu:0 "Nichitsu"
-kokura_arsenal:0 "Kokura Arsenal"
-nagoya_arsenal:0 "Nagoya Arsenal"
-osaka_army_arsenal:0 "Osaka Army Arsenal"
-isuzu:0 "Isuzu"
-toyota:0 "Toyota"
-hitachi:0 "Hitachi"
-nissan:0 "Nissan"
-tokyo_gas:0 "Tokyo Gas & Electric"
-mitsubishi:0 "Mitsubishi"
-kyushu_hikoki:0 "Kyushu Hikoki"
-aichi:0 "Aichi"
-tachikawa:0 "Tachikawa"
-nakajima:0 "Nakajima"
-yokosuka:0 "Yokosuka"
-kawanishi:0 "Kawanishi"
-yokosuka_naval_arsenal:0 "Yokosuka Naval Arsenal"
-kure_naval_arsenal:0 "Kure Naval Arsenal"
-sasebo_naval_arsenal:0 "Sasebo Naval Arsenal"
-maizuru_naval_arsenal:0 "Maizuru Naval Arsenal"
+Nippon_Electric_Company:0 "일본전력"
+Ishikawajima_Heavy_Industries:0 "이시카와지마 중공업"
+Mitsui_Zaibatsu:0 "미츠이 재벌"
+Furukawa_Siemens:0 "후루카와 지멘스"
+Nihon_Musen:0 "일본무선"
+Nippon_Oil:0 "일본정유"
+kawasaki:0 "가와사키"
+sumitomo:0 "스미토모"
+tokyo_shibaura_denki:0 "도쿄 시바우라 전기"
+nichitsu:0 "니치츠"
+kokura_arsenal:0 "고쿠라 공창"
+nagoya_arsenal:0 "나고야 공창"
+osaka_army_arsenal:0 "오사카 육군 공창"
+isuzu:0 "이스즈"
+toyota:0 "도요타"
+hitachi:0 "히타치"
+nissan:0 "닛산"
+tokyo_gas:0 "도쿄 가스 & 전력"
+mitsubishi:0 "미쓰비시"
+kyushu_hikoki:0 "규슈 항공기"
+aichi:0 "아이치"
+tachikawa:0 "타치카와"
+nakajima:0 "나카지마"
+yokosuka:0 "요코스카"
+kawanishi:0 "카와니시"
+yokosuka_naval_arsenal:0 "요코스카 해군 공창"
+kure_naval_arsenal:0 "구레 해군 공창"
+sasebo_naval_arsenal:0 "사세보 해군 공창"
+maizuru_naval_arsenal:0 "마이즈루 해군 공창"
 
 ### La Plata ###
 somisa:0 "SOMISA"
@@ -439,7 +439,7 @@ machines_bull:0 "Compagnie des Machines Bull"
 compagnie_petroles:0 "Compagnie Française des Pétroles"
 darne:0 "Darne"
 manufacture_armes_tunis:0 "Manufacture Nationale d'Armes de Tunis"
-hotchkiss:0 "Hotchkiss"
+hotchkiss:0 "호치키스"
 delaunay_belleville:0 "Delaunay-Belleville"
 vetra:0 "Vetra"
 renault:0 "Renault"
@@ -455,16 +455,16 @@ chartiers_dakar:0 "Chantiers Navals de Dakar"
 
 ### Netherlands ###
 koninklijke_hoogovens:0 "Koninklijke Hoogovens"
-philips:0 "Philips"
+philips:0 "필립스"
 hazemeyer:0 "Hazemeyer Signaalapparatenfabriek"
-shell:0 "Shell"
+shell:0 "쉘"
 artillerie_inrichtingen_company:0 "Artillerie-Inrichtingen"
 hih_siderius:0 "HIH Siderius"
 daf:0 "DAF"
 spyker:0 "Spyker-Trompenburg"
 den_oudsten:0 "Den Oudsten & Domburg"
 werkspoor:0 "Werkspoor"
-fokker:0 "Fokker"
+fokker:0 "포커"
 koolhoven:0 "Koolhoven"
 pander:0 "Pander"
 aviolanda:0 "Aviolanda"
@@ -476,8 +476,8 @@ rotterdamsche_maatschappij_desc:0 "The largest shipbuilding and repair company o
 
 ### New_England ###
 kr_raytheon:0 "Raytheon"
-kr_dupont:0 "DuPont"
-smith_wesson:0 "Smith & Wesson"
+kr_dupont:0 "듀폰트"
+smith_wesson:0 "스미스 & 웨슨"
 american_locomotive_company:0 "American Locomotive Company"
 chance_vought:0 "Chance Vought"
 nee_electric_boat:0 "Electric Boat"
@@ -521,11 +521,11 @@ golcuk_tersanesi:0 "Gölcük Tersanesi"
 taskizak_tersanesi:0 "Taşkızak Tersanesi"
 
 ### Pacific States of America ###
-southern_pacific_railroad:0 "Southern Pacific Railroad"
-westinghouse:0 "Westinghouse"
-socal:0 "Standard Oil Of California"
-browning:0 "Browning"
-mack_trucks:0 "Mack"
+southern_pacific_railroad:0 "남태평양 철도"
+westinghouse:0 "웨스팅하우스"
+socal:0 "캘리포니아 표준 정유"
+browning:0 "브라우닝"
+mack_trucks:0 "맥"
 pacific_car_and_foundry:0 "Pacific Car and Foundry"
 packard:0 "Packard"
 lockheed:0 "Lockheed"
