--- a/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
@@ -13,11 +13,11 @@ OTT_reparation_payments_from_greece_desc:0 "그리스가 오스만에게 전쟁 
 ### Decisions ###
 Belgrade_Pact_Balkan_War:0 "4차 발칸 전쟁"
 Belgrade_Pact_Romania_capture_dobrudzha_mission:0 "도브루자 확보"
-Belgrade_Pact_Romania_capture_dobrudzha_mission_desc:0 "At last we can have our revenge on the Bulgarians. It is our duty to re-capture Dobrogea, which was stolen from us by the Central Powers after the Weltkrieg."
+Belgrade_Pact_Romania_capture_dobrudzha_mission_desc:0 "드디어 우리는 불가리아에게 복수를 할 수 있게 되었습니다. 대전쟁 이후 동맹국이 빼앗아간 도브루자를 되찾아와야 할 사명이 있습니다."
 Belgrade_Pact_Serbia_capture_macedonia_mission:0 "마케도니아 확보"
-Belgrade_Pact_Serbia_capture_macedonia_mission_desc:0 "At last we can have our revenge on the Bulgarians. It is our duty to re-capture Macedonia, which is rightfully ours but was stolen by Bulgaria after the Weltkrieg."
+Belgrade_Pact_Serbia_capture_macedonia_mission_desc:0 "드디어 우리는 불가리아에게 복수를 할 수 있게 되었습니다. 대전쟁 이후 불가리아가 빼앗아간 마케도니아를 되찾아와야 할 사명이 있습니다."
 Belgrade_Pact_Greece_capture_southern_macedonia:0 "남부 마케도니아 확보"
-Belgrade_Pact_Greece_capture_southern_macedonia_desc:0 "At last we can have our revenge on the Bulgarians. It is our duty to re-capture Macedonia, which is rightfully ours but was stolen by Bulgaria after the Weltkrieg."
+Belgrade_Pact_Greece_capture_southern_macedonia_desc:0 드디어 우리는 불가리아에게 복수를 할 수 있게 되었습니다. 대전쟁 이후 불가리아가 빼앗아간 우리의 정당한 영토인 마케도니아를 되찾아와야 할 사명이 있습니다."
 Belgrade_Pact_race_to_sofia:0 "소피아 레이스"
 Belgrade_Pact_race_to_sofia_desc:0 "The Bulgarian defences have been breached and the road to Sofia now lays open. It is a matter of time before the Bulgarian captial falls. Capturing this important city would be a great success for our nation."
 
@@ -55,11 +55,11 @@ pact.2.d:0 "Serbia has invited us to send a diplomat to Belgrade to take part in
 pact.2.a:0 "Announce our support for the Belgrade Pact."
 pact.2.b:0 "We have no interest in expanding in this direction."
 
-pact.3.t:0 "[From.GetName]가 베오그라드 조약기구에 가입하다"
+pact.3.t:0 "[From.GetName](이)가 베오그라드 조약기구에 가입하다"
 pact.3.d:0 "The [From.GetAdjective] government has announced they will attend the congress in Belgrade and formally join the Belgrade Pact."
 pact.3.a:0 "평화를 위해 함께하자!"
 
-pact.4.t:0 "[From.GetName]가 베오그라드 조약기구에 가입하지 않다"
+pact.4.t:0 "[From.GetName](이)가 베오그라드 조약기구에 가입하지 않다"
 pact.4.d:0 "The [From.GetAdjective] government has announced they will, for the time being, not be part of any formal alliance aimed at Bulgaria."
 pact.4.a:0 "저들이 필요하지 않다."
 
@@ -226,32 +226,32 @@ pact.39.d:0 "Our intervention in the Fourth Balkan War has been a total disaster
 pact.39.a:0 "휴전을 제안한다."
 pact.39.b:0 "아직 이길 수 있다!"
 
-pact.40.t:0 "The Ottomans ask for peace"
+pact.40.t:0 "오스만이 휴전을 제안합니다"
 pact.40.d:0 "With their capital occupied and their forces in full retreat, the Ottoman Empire has asked us for peace. They will hand over some disputed territories, but we will have to hand Constantinople and Edirne back."
 pact.40.a:0 "The Belgrade Pact stands triumphant."
 pact.40.b:0 "No, they shall be crushed!"
 
-pact.41.t:0 "Peace with the Belgrade Pact"
+pact.41.t:0 "베오그라드 조약과의 휴전"
 pact.41.d:0 "The Belgrade Pact has accepted our peace offer. We have to cede some disputed land to them but they will retreat their forces."
 pact.41.a:0 "At least we got Constantinople back!"
 
-pact.42.t:0 "The Ottoman Empire surrenders"
+pact.42.t:0 "오스만 제국 항복"
 pact.42.d:0 "The joined armed forces of the Belgrade Pact have managed to defeat the Ottomans and have occupied Constantinople. The Ottoman Empire has surrendered an ceded some disputed land to the Pact, but we have to give them their capital back. Another enemy of us is defeated."
 pact.42.a:0 "The Belgrade Pact stands triumphant!"
 
-pact.43.t:0 "We're losing the Balkan War"
+pact.43.t:0 "우린 발칸전쟁에서 지고 있습니다"
 pact.43.d:0 "Though the Balkan War brought us huge success initially as we managed to conquer Bulgaria, the Ottoman intervention has turned the tide. Large parts of Bulgaria are now occupied by the Ottomans, and they continue to push. We can offer the Ottomans to cede all land we have gained and dismantle the Belgrade Pact. These are harsh terms but otherwise we might lose our independence."
-pact.43.a:0 "Sue for peace."
-pact.43.b:0 "We can still win this!"
+pact.43.a:0 "휴전을 제안한다."
+pact.43.b:0 "아직 이길 수 있다!"
 
-pact.44.t:0 "Serbia asks for peace"
+pact.44.t:0 "세르비아가 휴전을 제안합니다"
 pact.44.d:0 "We have liberated large parts of Bulgaria and the Belgrade Pact is in retreat. Now, Serbia has approached us with a peace offer. The Belgrade Pact will give up all conquered Bulgarian territory and they will disband their alliance, returning to the pre-war state. In return we allow them to keep their independence."
 pact.44.a:0 "Enough bloodshed. End this war."
 pact.44.b:0 "No, they shall be crushed!"
 
-pact.45.t:0 "Peace is signed, end of the war"
+pact.45.t:0 "휴전 협정이 체결되었으며, 종전하였습니다"
 pact.45.d:0 "Though the Balkan War brought us huge success initially as we managed to conquer Bulgaria, the Ottoman intervention has turned the tide. Large parts of Bulgaria are now occupied by the Ottomans. Negotiations between Serbia and the Ottomans have resulted in a peace deal. We need to give up all land we gained while the Belgrade Pact will be disbanded."
-pact.45.a:0 "We will not forget this!"
+pact.45.a:0 "우린 이 일을 잊지않을 것이다!"
 
 pact.46.t:0 "[From.GetName] refuses our peace offer"
 pact.46.d:0 "Although we offered great concessions to our enemy, the [From.GetAdjective] government has refused our peace offer, stating we will be utterly crushed."
@@ -280,7 +280,7 @@ pact.51.desc_no_ottomans:0 "The Fourth Balkan War has not quite had the successe
 pact.51.desc_payments_to_ottomans:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Thessalia, cede Thessaloniki, renounce our claims on Central Macedonia and pay war reparations to the Ottomans. The Belgrade Pact will be disbanded."
 pact.51.a:0 "Are they invincible?"
 
-pact.52.t:0 "Southern Macedonia"
+pact.52.t:0 "남부 마케도니아"
 pact.52.d:0 "While we have integrated roughly half of Macedonia into our nation, the other half still remains in question. What many officials want is to get rid of the land by offering it to Greece, as it was once Greek, in return for them joining the Pact. Several hawks have pointed out that we asked for the Greeks to join us before and therefore they shouldn't get it. What shall we do?"
 pact.52.a:0 "Offer Southern Macedonia to the Greeks."
 pact.52.b:0 "It will be part of our occupation zone."
@@ -295,12 +295,12 @@ pact.54.t:0 "Greece joins the Belgrade Pact"
 pact.54.d:0 "The Greek government has agreed to our proposal and we have handed over Southern Macedonia to them."
 pact.54.a:0 "Let us celebrate with our new allies."
 
-pact.55.t:0 "Status of Thrace"
+pact.55.t:0 "트라키아의 지위"
 pact.55.d:0 "The Greeks have sent us an additional message alongside their formal joining of the Pact. They are asking that the whole of Thrace be ceded to them as it is majority Greek. However, it is not under our sector of Bulgaria, and is in Ottoman hands. Asking the Ottomans to give up the territory just after they got it would be humiliating for them but we do not want to spurn our new Greek allies either. What shall we do?"
 pact.55.a:0 "Demand the Ottomans to cede Thrace."
 pact.55.b:0 "It will stay with the Ottomans!"
 
-pact.56.t:0 "Status of Thrace"
+pact.56.t:0 "트라키아의 지위"
 pact.56.d:0 "The Serbians have ceded Southern Macedonia to the Greeks in return for them join the Belgrade Pact. While this good for the overall power of the Pact, the Serbs are calling on us to cede all of Thrace to the Greeks. Considering it was originally given to us as a part of our sector of Bulgaria, there is pressure to resist this and keep it. Shall we bow to the Serbian demand?"
 pact.56.a:0 "Very well then."
 pact.56.b:0 "No, we are keeping our new lands."
@@ -321,12 +321,12 @@ pact.60.t:0 "[From.GetName] won't join the Belgrade Pact"
 pact.60.d:0 "The [From.GetAdjective] government has announced they don't want to be part of the Belgrade Pact, not even when offered territorial concessions."
 pact.60.a:0 "Unfortunate."
 
-pact.61.t:0 "Status of Dobrudzha"
+pact.61.t:0 "도브루자의 지위"
 pact.61.d:0 "With the beginning of the occupation of Bulgaria we have been given the territory of Dobrudzha. This part of Bulgaria was taken from the Romanians after the Weltkrieg and we may be able to get them to join the Belgrade Pact in return for the area. Shall we send them an offer?"
 pact.61.a:0 "Offer Dobrudzha to Romania."
 pact.61.b:0 "It will be a part of our occupation zone."
 
-pact.62.t:0 "Serbia offers Dobrogea"
+pact.62.t:0 "도브루자의 지위"
 pact.62.d:0 "The Serbians have defeated Bulgaria and have come to us, offering Dobrudzha to us in return for allying with them. Regaining this province would calm the masses and increase our prestige abroad. Shall we accept the offer?"
 pact.62.a:0 "Welcome home, Dobrogea!"
 pact.62.b:0 "We don't want it."
