--- a/Kaiserreich Korean Translation/localisation/KR_Tannu_Tuva_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Tannu_Tuva_l_english.yml
@@ -1,70 +1,70 @@
 l_english:
 
 ### Events ###
-tuva.1.t:0 "Foundation of the Khural"
-tuva.1.d:0 "The Tuvan nation is gaining further structure, and today we have officially founded the national parliament, the Khural, to deal with local and national issues. How shall this structure be treated?"
-tuva.1.a:0 "Officially recognise the local tribes and leaders through the Khural."
-tuva.1.b:0 "Set up a democratic system through the Khural."
-tuva.1.c:0 "Set up an autocracy of Ondar and Khuular and limit the Khural."
+tuva.1.t:0 "후랄 재단
+tuva.1.d:0 "투바의 체계는 더욱 발전하고 있고, 오늘 우리는 지역과 국가적 문제를 다루기 위해 공식적으로 의회인 후랄을 설립했습니다. 이 시스템을 어떻게 여겨야 할까요?"
+tuva.1.a:0 "후랄을 통해 지역 부족 및 지도자를 공식적으로 인정하다."
+tuva.1.b:0 "후랄을 통해 민주주의 체제를 수립하라."
+tuva.1.c:0 "Ondar과 Kheular의 독재 국가를 세우고 후랄을 제한하라."
 
-tuva.2.t:0 "The Tuvan Army"
-tuva.2.d:0 "The Khural's meeting has resulted in the first issue, being that of the situation of the army."
-tuva.2.a:0 "Leave recruiting and maintenance to the tribes."
-tuva.2.b:0 "Build a strong central military."
-tuva.2.c:0 "Create a decentralised, Peoples' Army."
+tuva.2.t:0 "투반의 군대"
+tuva.2.d:0 "군대의 상황과 관련된 문제가 후랄의 회의의 첫 번째 쟁점이 되었습니다."
+tuva.2.a:0 "채용 및 유지 관리를 해당 부족에 맡긴다."
+tuva.2.b:0 "강력한 중앙 군사력을 구축하라."
+tuva.2.c:0 "분산된 인민 군대를 만들어라."
 
-tuva.3.t:0 "Tuvan National Railroad"
-tuva.3.d:0 "Members of the Khural met today, with their newest proposition. The bill introduced was to build a railroad from Kyzyl, connecting settlements in the nation along the way to Irkutsk in the north, where it would join with the Trans-Siberian Railroad. This would greatly improve our infrastructure, and provide numerous economic benefits."
-tuva.3.a:0 "Build the Railroad !"
-tuva.3.b:0 "We can't afford this"
+tuva.3.t:0 "투반 국립 철도"
+tuva.3.d:0 "후랄의 의원들은 오늘 새로운 법안을 도입하였습니다. 도입된 법안은 키질부터 북쪽의 이르쿠츠크로 가는 길에 철도를 건설하는 것이었는데, 그곳의 철도는 시베리아 횡단 철도와 연결될 것입니다. 이것은 우리의 기반 시설을 크게 개선하고 많은 경제적 이익을 제공할 것입니다."
+tuva.3.a:0 "철도를 건설해라!"
+tuva.3.b:0 "우린 이것을 감당할 수 없다"
 
-tuva.4.t:0 "The Kyzyl Airport"
-tuva.4.d:0 "Members of the Khural met today, enthusiastic with the growth taking place in Tuva. Hoping to further expand the economic boom, representatives from the Kyzyl capital area have proposed a bill to put money into building Kyzyl International Airport. This could prove very prosperous for the Tuvans in the long run."
-tuva.4.a:0 "Build the Airport"
-tuva.4.b:0 "We can't afford this"
+tuva.4.t:0 "키질 공항"
+tuva.4.d:0 "후랄의 의원들은 오늘 만나서 투바에서 일어나는 열렬한 성장과 경제 호황이 더 확대하기를 바라면서, 키질 수도권의 대표들은 키질 국제 공항을 건설하는데 돈을 투자하는 법안을 제안했다. 이것은 장기적으로 투바에게 번영을 가져다 줄 수 있다."
+tuva.4.a:0 "공항을 건설해라"
+tuva.4.b:0 "우린 이것을 감당할 수 없다"
 
-tuva.5.t:0 "The Smuggler Problem"
-tuva.5.d:0 "For years, Tuva has been a hub for smugglers on a route that extends from the Trans-Siberian railroad in the north to Shanghai in the south, linking East Asia with Europe. Supported by the Mongolian government, Kyzyl became an important stopping point along this route. Recently, a coalition of smugglers banded together to meet with Ondar, ready to discuss the future of smugglers and bandits in Tuva."
-tuva.5.a:0 "Pledge the continued support of the smugglers."
-tuva.5.b:0 "Sternberg is dead, and we'll never support renegades!"
+tuva.5.t:0 "밀수범 문제"
+tuva.5.d:0 "수년 간, 투바는 동아시아와 유럽을 연결하면서 북쪽의 시베리아 횡단 철도에서 남쪽의 상하이까지 이어지는 경로에서 밀수업자들의 중심지가 되어 왔습니다. 몽골 정부의 지원을 받아, 키질은 이 루트를 따라 중요한 지점이 되었습니다. 최근에, 밀수업자 연합은 Ondar과 함께 만나기 위해 단결하여, 투바에 있는 밀수범들과 산적들의 미래에 대해 논의할 준비를 하였다."
+tuva.5.a:0 "밀수업자들에게 지속적인 지지를 약속하다"
+tuva.5.b:0 "Sternberg는 죽었고 우리는 결코 변절자들을 지지하지 않겠다!"
 
-tuva.6.t:0 "The Kyzyl Airport"
-tuva.6.d:0 "There has been great concern amongst the smugglers and local representatives in Kyzyl to create a national airport. Both see it as an ample reason to expand the economy and strength of the nation. The smugglers especially are very ambitious people. It would be unwise to upset them..."
-tuva.6.a:0 "Build the Airport."
-tuva.6.b:0 "We don't have the resources now."
+tuva.6.t:0 "키질 공항"
+tuva.6.d:0 "밀수업자들과 키질의 현지 대표자들 사이에 국가 공항을 건설하는데 큰 관심이 있어 왔습니다. 둘 다 이것을 국가의 경제와 힘을 확장시킬 충분한 이유로 보고 있습니다.특히 그 밀수업자들은 매우 야심이 많은 자들 입니다. 그들을 화나게 하는 것은 현명하지 않을 것입니다..."
+tuva.6.a:0 "공항을 건설해라."
+tuva.6.b:0 "우리는 지금 자원이 없습니다."
 
-tuva.7.t:0 "The Irkutsk-Kyzyl Syndicate"
-tuva.7.d:0 "The rise of smuggler power in Kyzyl has grown considerably. Recently, the same powerful group of smugglers, thugs, and bandits who pushed for the creation of the Kyzyl airport have officially formed an alliance, called the Irkutsk-Kyzyl syndicate, after their two primary places of operation. Rumours are abound that our leader Ondar is playing a heavy hand in the rise and protection of all of this thuggery."
-tuva.7.a:0 "Their success is our success."
+tuva.7.t:0 "이르쿠츠크-키질 연합체"
+tuva.7.d:0 "키질에서 밀수업자들의 힘이 대폭 상승했습니다. 최근 키질 공항의 창설을 추진했던 강력한 밀수업자단, 폭력배, 도적단의 강력한 집단이 이르쿠츠크-키질 조합이라는 공식적인 동맹을 결성한 후에 그들의 두곳의 주요 사업장을 운영하고 있습니다.우리의 지도자 Ondar가 이 모든 폭력행위의 증가와 보호에 큰 역할을 하고 있다는 루머가 무성합니다."
+tuva.7.a:0 "그들의 성공은 우리의 성공이다."
 
-tuva.8.t:0 "Increased smuggling activity in Siberia"
-tuva.8.d:0 "The rise of smuggler activity from China along the Trans-Siberian Railroad for an unknown reason has greatly changed the crime rate of the nation, leading to criminalisation of officials in Siberia, and losing confidence from the local Russians there."
-tuva.8.a:0 "Increase security along Trans-Siberian railroad!"
+tuva.8.t:0 "시베리아에서의 밀수 활동 증가"
+tuva.8.d:0 "시베리아 철도를 따라 발생한 중국에서의 밀수 행위의 증가는 국가의 범죄율을 크게 변화시켰고 시베리아의 공무원들을 범인 취급하여 현지 러시아인들로부터 신뢰를 잃게 되었다."
+tuva.8.a:0 "시베리아 횡단 철도의 보안을 강화해라!"
 
 ### Parties ###
-TAN_totalist_party:0 "Khural"
-TAN_radical_socialist_party:0 "Khural"
-TAN_syndicalist_party:0 "Khural"
-TAN_social_democrat_party:0 "Khural"
-TAN_social_liberal_party:0 "Khural"
-TAN_market_liberal_party:0 "Khural"
-TAN_social_conservative_party:0 "Khural"
-TAN_authoritarian_democrat_party:0 "Tribal Council"
+TAN_totalist_party:0 "후랄"
+TAN_radical_socialist_party:0 "후랄"
+TAN_syndicalist_party:0 "후랄"
+TAN_social_democrat_party:0 "후랄"
+TAN_social_liberal_party:0 "후랄"
+TAN_market_liberal_party:0 "후랄"
+TAN_social_conservative_party:0 "후랄"
+TAN_authoritarian_democrat_party:0 "부족 협의회"
 TAN_paternal_autocrat_party:0 "KG"
 TAN_national_populist_party:0 "TNP"
-TAN_totalist_party_long:0 "Khural"
-TAN_radical_socialist_party_long:0 "Khural"
-TAN_syndicalist_party_long:0 "Khural"
-TAN_social_democrat_party_long:0 "Khural"
-TAN_social_liberal_party_long:0 "Khural"
-TAN_market_liberal_party_long:0 "Khural"
-TAN_social_conservative_party_long:0 "Khural"
-TAN_authoritarian_democrat_party_long:0 "Tribal Council"
-TAN_paternal_autocrat_party_long:0 "Kuular Government"
-TAN_national_populist_party_long:0 "Tuvan Nationalist Party"
+TAN_totalist_party_long:0 "후랄"
+TAN_radical_socialist_party_long:0 "후랄"
+TAN_syndicalist_party_long:0 "후랄"
+TAN_social_democrat_party_long:0 "후랄"
+TAN_social_liberal_party_long:0 "후랄"
+TAN_market_liberal_party_long:0 "후랄"
+TAN_social_conservative_party_long:0 "후랄"
+TAN_authoritarian_democrat_party_long:0 "부족 협의회"
+TAN_paternal_autocrat_party_long:0 "Kuular 정부"
+TAN_national_populist_party_long:0 "투바 국민당"
 
 ### Ideas ###
-TAN_tribal:0 "Tribal Army"
-TAN_prof:0 "Professional Army"
-TAN_mass:0 "Mass Army"
+TAN_tribal:0 "부족 군대"
+TAN_prof:0 "전문적인 군대"
+TAN_mass:0 "거대한 군대"
 
