--- a/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
@@ -8,8 +8,8 @@ DEH_social_democrat_party:0 "IHRP"
 DEH_social_liberal_party:0 "스와라지"
 DEH_market_liberal_party:0 "자유주의자"
 DEH_social_conservative_party:0 "통일주의자"
-DEH_authoritarian_democrat_party:0 "왕립회의"
-DEH_paternal_autocrat_party:0 "왕실 지지자"
+DEH_authoritarian_democrat_party:0 "토후회의"
+DEH_paternal_autocrat_party:0 "토후 지지자"
 DEH_national_populist_party:0 "황실 지지자"
 DEH_totalist_party_long:0 "인도 최대주의당"
 DEH_radical_socialist_party_long:0 "인도 사회주의당"
@@ -18,8 +18,8 @@ DEH_social_democrat_party_long:0 "전인도 자주당"
 DEH_social_liberal_party_long:0 "당"
 DEH_market_liberal_party_long:0 "인도 자유당"
 DEH_social_conservative_party_long:0 "통일당"
-DEH_authoritarian_democrat_party_long:0 "왕립회의"
-DEH_paternal_autocrat_party_long:0 "왕실 지지자"
+DEH_authoritarian_democrat_party_long:0 "토후회의"
+DEH_paternal_autocrat_party_long:0 "토후 지지자"
 DEH_national_populist_party_long:0 "황실 지지자"
 
 ### Leader Descriptions ###
