--- a/Kaiserreich Korean Translation/localisation/KR_Gabon_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Gabon_l_english.yml
@@ -94,14 +94,14 @@ gab.16.b:0 "The Anarcho-Syndicalists have the majority!"
 gab.16.c:0 "The Totalists shall have rule!"
 
 ### Ideas ###
-GAB_push_independence_idea:0 "Independence Push"
+GAB_push_independence_idea:0 "독립 압박"
 GAB_push_independence_idea_desc:0 "Gabon has felt its first taste of freedom, and is not going to give up the oppurtunity to be independent so easily!"
 
-GAB_Dahomey_Coop_idea:0 "Cooperating with Dahomey"
+GAB_Dahomey_Coop_idea:0 "다호메이와 협력"
 GAB_Cooperate_with_Dahomey_desc:0 "The friend of our friend is also OUR friend, cooperating with Dahomey helps us both"
 
-GAB_French_Advisors_idea:0 "French Advisers"
+GAB_French_Advisors_idea:0 "프랑스 고문관"
 GAB_French_Advisors_idea_desc:0 "The Commune of France has sent us several well experienced advisers to help us in our struggle"
 
-GAB_The_Gabonese_Constitution:0 "The Gabonese Constitution"
+GAB_The_Gabonese_Constitution:0 "가봉 헌법"
 GAB_The_Gabonese_Constitution_desc:0 "The ratification of a constitution has given much needed legitimacy to Gabon's sovereignty, and has brought many in our nation together"
